--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 
   <title>React App</title>
 
-
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
 
 </head>
 
